Criação do facelet Neonatal

--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -102,11 +102,15 @@
 							<p:menuitem value="Nova solicitação" outcome="/cirurgia/solicitacao-procedimento/nova-solicitacao" />
 						</p:submenu>
 					</p:submenu>
-					
+
 					<p:submenu icon="pi pi-pencil" label="Evolução">
 						<p:submenu label="Terapia Intensiva">
 							<p:menuitem value="Apache II" outcome="/evolucoes/apache" />
 						</p:submenu>
+					</p:submenu>
+
+					<p:submenu icon="pi pi-pencil" label="Triagem">
+						<p:menuitem value="Neonatal - FARNNeo" outcome="/triagens/neonatal-farnneo" />
 					</p:submenu>
 				</p:tieredMenu>
 			</h:form>
