Acrescenta ficha de evolução de enfermagem

--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -103,6 +103,10 @@
 						</p:submenu>
 					</p:submenu>
 
+					<p:submenu icon="pi pi-user-plus" label="Enfermagem">
+						<p:menuitem value="Evolução" outcome="/enfermagem/evolucao" />
+					</p:submenu>
+
 					<p:submenu icon="pi pi-pencil" label="Evolução">
 						<p:submenu label="Terapia Intensiva">
 							<p:menuitem value="Apache II" outcome="/evolucoes/apache" />
