--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -113,7 +113,21 @@
 						</p:submenu>
 					</p:submenu>
 
-					<p:submenu icon="pi pi-pencil" label="Triagem">
+                    <p:submenu icon="pi pi-search" label="Pesquisa"
+                               rendered="#{request.isUserInRole('PESQUISA_USUARIO') or
+                                request.isUserInRole('PESQUISA_ADMIN')}">
+                        <p:submenu label="Administração" rendered="#{request.isUserInRole('PESQUISA_ADMIN')}">
+                            <p:menuitem value="Bolsas" outcome="/pesquisa/administracao/bolsas-produtividade-cnpq" />
+                            <p:menuitem value="Formações" outcome="/pesquisa/administracao/formacoes-academicas" />
+                            <p:menuitem value="Instituições" outcome="/pesquisa/administracao/instituicoes" />
+                            <p:menuitem value="Linhas de pesquisa" outcome="/pesquisa/administracao/linhas-pesquisa" />
+                            <p:menuitem value="Níveis de formação" outcome="/pesquisa/administracao/niveis-formacao" />
+                            <p:menuitem value="Programas de pós-graduação" outcome="/pesquisa/administracao/programas-pos-graduacao" />
+                        </p:submenu>
+                        <p:menuitem value="Cadastro de pesquisadores" outcome="/pesquisa/pesquisadores" />
+                    </p:submenu>
+
+                    <p:submenu icon="pi pi-pencil" label="Triagem">
 						<p:menuitem value="Neonatal - FARNNeo" outcome="/triagens/neonatal-farnneo" />
 					</p:submenu>
 				</p:tieredMenu>
